--- a/ansible/unix-packages/tasks/main.yml
+++ b/ansible/unix-packages/tasks/main.yml
@@ -3,11 +3,13 @@
     file: "{{ packages }}"
     name: packages_file
 
+- debug: var=ansible_facts
+
 ### START APT
 # On apt-get target
 - apt_repository: repo={{ item.value.repository_url }} state=present
   with_dict: "{{ packages_file.repositories | default({}) }}" 
-  when: packages_file.package is defined and (ansible_os_family == 'Debian')
+  when: packages_file.packages is defined and (ansible_os_family == 'Debian') 
   become: true
 
 # On apt-get target
@@ -16,7 +18,7 @@
     keyserver: "{{ item.value.keyserver_url }}"
     id: "{{ item.value.keyserver_id }}"
   with_dict: "{{ packages_file.repositories | default({}) }}"  
-  when: packages_file.package is defined  and (ansible_os_family == 'Debian')
+  when: packages_file.packages is defined  and (ansible_os_family == 'Debian')
   become: true
 
 # apt-get update
@@ -29,7 +31,7 @@
 # install packages
 - apt: name={{ item.value.package_name }} state={{ item.value.package_state }}
   with_dict: "{{ packages_file.packages  | default({}) }}"
-  when: packages_file.package is defined and (ansible_os_family == 'Debian') 
+  when: packages_file.packages is defined and (ansible_os_family == 'Debian') 
   become: true
 ### END APT
 
@@ -37,6 +39,6 @@
 # install packages
 - pacman: name={{ item.value.package_name }} state={{ item.value.package_state }}
   with_dict: "{{ packages_file.packages  | default({}) }}"
-  when: packages_file.package is defined and (ansible_os_family == 'ArchLinux') 
+  when: packages_file.packages is defined and (ansible_os_family == 'ArchLinux') 
   become: true
 ### END PACMAN
