--- a/ansible/provdesktop.yml
+++ b/ansible/provdesktop.yml
@@ -66,7 +66,7 @@
         application_setup: "{{ docker_applications_yaml }}"
         desktop_dir: "{{ desktop_directory }}"
 
-    # ALL
+    # CUSTOM ROLE
     - include_role: 
         name: custom-roles
       vars:
