--- a/ansible/sample-desktop-setup/macos-configure-os-settings.yml
+++ b/ansible/sample-desktop-setup/macos-configure-os-settings.yml
@@ -8,72 +8,80 @@ dock:
           path: "/System/Applications/Launchpad.app" 
           pos: 1
           type: app
+        - name: Mission Control
+          path: "/System/Applications/Mission Control.app" 
+          pos: 2
+          type: app
         - name: Safari
           path: "/Applications/Safari.app" 
-          pos: 2
+          pos: 3
           type: app
         - name: Firefox
           path: "/Applications/Firefox.app" 
-          pos: 3
+          pos: 4
           type: app
         - name: Chrome
           path: "/Applications/Google Chrome.app" 
-          pos: 4
+          pos: 5
           type: app
         - name: iTerm
           path: "/Applications/iTerm.app" 
-          pos: 5
+          pos: 6
           type: app
         - name: Visual Studio Code
           path: "/Applications/Visual Studio Code.app" 
-          pos: 6
+          pos: 7
           type: app
         - name: Slack
           path: "/Applications/Slack.app" 
-          pos: 7
+          pos: 8
           type: app
         - name: Microsoft One Note
           path: "/Applications/Microsoft OneNote.app" 
-          pos: 8
+          pos: 9
           type: app
         - name: Steam
           path: "/Applications/Steam.app" 
-          pos: 9
+          pos: 10
           type: app
         - name: 1Password
           path: "/Applications/1Password 7.app" 
-          pos: 10
+          pos: 11
+          type: app
+        - name: Messages
+          path: "/System/Applications/Messages.app" 
+          pos: 12
           type: app
         - name: Mail
           path: "/System/Applications/Mail.app" 
-          pos: 11
+          pos: 13
           type: app
         - name: Photos
           path: "/System/Applications/Photos.app" 
-          pos: 12
+          pos: 14
           type: app
         - name: Music
           path: "/System/Applications/Music.app" 
-          pos: 13
+          pos: 15
           type: app
         - name: TV
           path: "/System/Applications/TV.app" 
-          pos: 14
+          pos: 16
           type: app
         - name: App Store
           path: "/System/Applications/App Store.app" 
-          pos: 15
+          pos: 17
           type: app
         - name: System Preferences
           path: "/System/Applications/System Preferences.app" 
-          pos: 16
+          pos: 18
           type: app
         - name: 'Development'
           path: '~/development'
           folder_style: grid 
           folder_sort: name
           type: folder
-          pos: 17            
+          pos: 19            
     other_apps:
         - name: 'Downloads'
           path: '~/Downloads'
