--- a/ansible/provdesktop.yml
+++ b/ansible/provdesktop.yml
@@ -29,7 +29,7 @@
 
     # LINUX
     - include_role: 
-        name: install-docker
+        name: linux-install-docker
       when: ansible_system == 'Linux'
       vars:
         non_root_user: "{{ ansible_user_id }}" 
